syntax = "proto3";

option csharp_namespace = "Analytics.BLL.ProtoBase";

package product;

service ProductStatisticService {
  rpc GetProductStatistic(ProductData) returns (ProductStatisticData);
}


message ProductData {
  string ProductGuid = 1;
}

message ProductStatisticData {
  string ProductGuid = 1;
  int64 ViewCount = 2;
}